// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Task Archived 1`] = `
<storybook-dynamic-app-root
  __ngContext__={[Function LRootView]}
  cfr={[Function ComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef]}
>
  <app-task>
    <div
      class="TASK_ARCHIVED list-item"
    >
      <label
        class="checkbox"
      >
        <input
          checked=""
          disabled="true"
          name="checked"
          type="checkbox"
        />
        <span
          class="checkbox-custom"
        />
      </label>
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="true"
          type="text"
        />
      </div>
      <div
        class="actions"
      >
        
      </div>
    </div>
  </app-task>
</storybook-dynamic-app-root>
`;

exports[`Storyshots Task Default 1`] = `
<storybook-dynamic-app-root
  __ngContext__={[Function LRootView]}
  cfr={[Function ComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef]}
>
  <app-task>
    <div
      class="Task_INBOX list-item"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="true"
          name="checked"
          type="checkbox"
        />
        <span
          class="checkbox-custom"
        />
      </label>
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="true"
          type="text"
        />
      </div>
      <div
        class="actions"
      >
        <a>
          <span
            class="icon-star"
          />
        </a>
        
      </div>
    </div>
  </app-task>
</storybook-dynamic-app-root>
`;

exports[`Storyshots Task Pinned 1`] = `
<storybook-dynamic-app-root
  __ngContext__={[Function LRootView]}
  cfr={[Function ComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef]}
>
  <app-task>
    <div
      class="TASK_PINNED list-item"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="true"
          name="checked"
          type="checkbox"
        />
        <span
          class="checkbox-custom"
        />
      </label>
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="true"
          type="text"
        />
      </div>
      <div
        class="actions"
      >
        <a>
          <span
            class="icon-star"
          />
        </a>
        
      </div>
    </div>
  </app-task>
</storybook-dynamic-app-root>
`;
